--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "https://github.com/100stacks",
   "license": "MIT",
   "dependencies": {
+    "@passageidentity/passage-elements": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
