--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "@passageidentity/passage-elements": "^1.9.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "6.14.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2.1.0",
